[package]
name = "leptonic"
version = "0.2.0-alpha"
edition = "2021"
rust-version = "1.70.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptonic"
description = """
The Leptos component library.
"""
categories = ["gui"]
keywords = ["leptos", "components", "component-library"]

[dependencies]
indexmap = "2.0"
js-sys = "0.3"
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos-tiptap = { git = "https://github.com/dgsantana/leptos-tiptap.git", branch = "leptos_v0.5" }
leptos-use = { git = "https://github.com/dgsantana/leptos-use.git", branch = "leptos_v0.5", features = ["math"] }
leptos_icons = { git = "https://github.com/dgsantana/leptos-icons.git", branch = "leptos_v0.5", features = [
    "BsSun",
    "BsMoon",
    "BsCheckCircleFill",
    "BsInfoCircleFill",
    "BsExclamationCircleFill",
    "BsExclamationTriangleFill",
    "BsCaretUp",
    "BsCaretUpFill",
    "BsCaretDown",
    "BsCaretDownFill",
    "BsParagraph",
    "BsTypeBold",
    "BsTypeItalic",
    "BsTypeStrikethrough",
    "BsBlockquoteLeft",
    "BsBrightnessAltHigh",
    "BsTextLeft",
    "BsTextCenter",
    "BsTextRight",
    "BsJustify",
    "BsXCircleFill",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos" }
serde = "1.0"
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
time = { version = "0.3", features = [
    "wasm-bindgen",
    "macros",
    "serde",
    "serde-well-known",
] }
tracing = "0.1"
uuid = { version = "1.4", features = ["v4", "v7", "js", "serde"] }
wasm-bindgen = "0.2"
# TODO: What of all below is really required?
web-sys = { version = "0.3", features = [
    "DomRect",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "HtmlInputElement",
    "Storage",
] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
