[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.0-alpha", features = ["csr"] }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use", branch = "main" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-subscriber-wasm = "0.1.0"
